# APGP

./: .gitignore  APGP.lnk  APGP.sln  APGP.vcxproj  APGP.vcxproj.filters  CMakeLists.txt  CMakeSettings.json  README.md  todo.txt
data/jsons/: program.json  scene.json
data/jsons/graphics/: graphics.json  graphics_config.json
data/jsons/scenes/: new scene.json  p2 scene.json  p3 scene.json  sample scene.json  scene.json  template scene.json
data/jsons/shaders/: shaders.json
data/jsons/users/: user.json
data/jsons/windows/: windows.json
data/materials/: Face.mtl  LowPolyFace.mtl  Smooth Face.mtl  castle.mtl  default.mtl  eagle.mtl  grid.mtl  ink_blot.mtl  light_cube.mtl  no hair.mtl  pokeball.mtl  robot_full.mtl  transform.mtl
data/surfaces/: floor.srf  other_floor.srf  test_surface.srf
include/: buffers.h  byte.h  callbacks.h  camera.h  cameras.h  clock.h  color.h  colors.h  component_manager.h  component_pool.h  cursor.h  ecs_components.h  ecs_manager.h  edge.h  entity_manager.h  flat_light.h  flat_material.h  flat_vertex.h  framebuffer.h  glew_init.h  glfw_setup.h  graphics_config.h  input.h  input_manager.h  input_system.h  json.h  light.h  light_system.h  lights.h  material.h  materials.h  mesh.h  meshes.h  mouse.h  normal.h  object.h  object_parser.h  objects.h  patch.h  precise_timer.h  (+25 more)
shaders/: cfs.glsl  cvs.glsl  debug_quad.fs.glsl  debug_quad.vs.glsl  default.fs.glsl  default.tcs.glsl  default.tes.glsl  default.vs.glsl  default_fs.glsl  default_screen_quad.fs.glsl  default_screen_quad.vs.glsl  default_vs.glsl  fs.fglsl  fs.glsl  fxaa.fs.glsl  gs.gglsl  gs.glsl  motion_blur.fs.glsl  paraboloid.fs.glsl  paraboloid.vs.glsl  patch_depth_buffer.cs.glsl  patch_shadow.fs.glsl  patch_shadow.vs.glsl  patch_tess_pass.cs.glsl  pbr.fs.glsl  pbr.glsl  pbr.vs.glsl  pn_triangles.tcs.glsl  pn_triangles.tes.glsl  render_pass.fs.glsl  render_pass.tcs.glsl  render_pass.tes.glsl  render_pass.vs.glsl  shadow_debug.fs.glsl  shadow_debug.vs.glsl  shadow_depth.fs.glsl  shadow_depth.vs.glsl  visualize_tiles.fs.glsl  visualize_tiles.vs.glsl  vs.glsl  (+1 more)
src/: buffers.cpp  byte.cpp  callbacks.cpp  camera.cpp  cameras.cpp  clock.cpp  color.cpp  cursor.cpp  ecs_components.cpp  edge.cpp  framebuffer.cpp  glew_init.cpp  glfw_setup.cpp  graphics_config.cpp  input.cpp  input_manager.cpp  input_system.cpp  json.cpp  light.cpp  light_system.cpp  lights.cpp  main.cpp  material.cpp  materials.cpp  mesh.cpp  meshes.cpp  mouse.cpp  normal.cpp  object.cpp  object_parser.cpp  objects.cpp  patch.cpp  precise_timer.cpp  program.cpp  render_system.cpp  resource_manager.cpp  scene.cpp  shader.cpp  shader_manager.cpp  shaders.cpp  (+14 more)
